compiler/fir/analysis-tests/testData/resolveWithStdlib/contracts/fromSource/bad/callsInPlace/inLocalFunction.dot
digraph inLocalFunction_kt {
    graph [nodesep=3]
    node [shape=box penwidth=2]
    edge [penwidth=2]

    subgraph cluster_0 {
        color=red
        0 [label="Enter file inLocalFunction.kt" style="filled" fillcolor=red];
        1 [label="Exit file inLocalFunction.kt" style="filled" fillcolor=red];
    }
    0 -> {1} [color=green];

    subgraph cluster_1 {
        color=red
        2 [label="Enter function foo" style="filled" fillcolor=red];
        subgraph cluster_2 {
            color=blue
            3 [label="Enter block"];
            subgraph cluster_3 {
                color=blue
                4 [label="Enter block"];
                5 [label="Exit block"];
            }
            6 [label="Local function declaration"];
            subgraph cluster_4 {
                color=blue
                7 [label="Function call arguments enter"];
                8 [label="Function call arguments exit"];
            }
            9 [label="Function call: R|<local>/localFun|()" style="filled" fillcolor=yellow];
            subgraph cluster_5 {
                color=blue
                10 [label="Function call arguments enter"];
                11 [label="Function call arguments exit"];
            }
            12 [label="Function call: R|<local>/b|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            13 [label="Exit block"];
        }
        14 [label="Exit function foo" style="filled" fillcolor=red];
    }
    subgraph cluster_6 {
        color=blue
        15 [label="Enter function localFun" style="filled" fillcolor=red];
        subgraph cluster_7 {
            color=blue
            16 [label="Enter block"];
            subgraph cluster_8 {
                color=blue
                17 [label="Function call arguments enter"];
                18 [label="Access variable R|<local>/a|"];
                19 [label="Function call arguments exit"];
            }
            20 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            subgraph cluster_9 {
                color=blue
                21 [label="Function call arguments enter"];
                22 [label="Function call arguments exit"];
            }
            23 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            24 [label="Exit block"];
        }
        25 [label="Exit function localFun" style="filled" fillcolor=red];
    }
    2 -> {3};
    3 -> {4};
    4 -> {5};
    5 -> {6};
    6 -> {7 15};
    6 -> {15} [style=dashed];
    7 -> {8};
    8 -> {9};
    9 -> {10};
    10 -> {11};
    11 -> {12};
    12 -> {13};
    13 -> {14};
    15 -> {16};
    16 -> {17};
    17 -> {18};
    18 -> {19};
    19 -> {20};
    20 -> {21};
    21 -> {22};
    22 -> {23};
    23 -> {24};
    24 -> {25};

}
